# PunchCard

./: LICENSE  README.md  build.sh  cargo-config.toml  data.txt
android/: settings.gradle
android/app/: build.gradle
android/app/src/androidTest/java/com/example/punchcard/: ExampleInstrumentedTest.java
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/example/punchcard/: MainActivity.java  RustPunchCard.java
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/values/: strings.xml
android/app/src/test/java/com/example/punchcard/: ExampleUnitTest.java
android/gradle/wrapper/: gradle-wrapper.properties
cargo/: Cargo.toml
cargo/src/: bin.rs  crypto.rs  crypto_pairing.rs  lib.rs
cargo/src/lib/: crypto.rs  crypto_pairing.rs
